Added: Sale, Goods

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,52 @@
-body{
-    margin: 0;
-    padding: 0;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+    background: #EFEFEF;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+body {
+    width: 100%;
+    min-height:100%;
+    font-family: "Roboto";
 }
 .top_line {
     width: 100%;
@@ -31,9 +77,8 @@ body{
     width: 100%;
     height: 150px;
     background-color: white;
-    margin-top: 20px;
-
-
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 .second_line_menu_point {
     font-family: 'Roboto';
@@ -45,10 +90,12 @@ body{
     cursor: pointer;
     /* identical to box height */
     color: #000000;
+    margin-top: 20px;
 }
 .second_line_menu {
     display: flex;
     justify-content: center;
+    margin-top: 20px;
 }
 .logo{
     display: flex;
@@ -58,8 +105,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-left: 21%;
-    margin-right: 21%;
+    margin-left: 15%;
+    margin-right: 15%;
 }
 .main_logo_text {
     font-family: 'Roboto';
@@ -93,8 +140,135 @@ body{
     align-items: center;
 }
 
-.sale_back {
-    width: 100%;
+.sale {
+    padding: 10%;
+    padding-left: 15%;
+    padding-right: 61%;
+    background: url(sale_back.png) 0 0/cover no-repeat;
+}
+.sale_header {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 250%;
+    line-height: 56px;
+
+    color: #FFFFFF;
+}
+
+.sale_description {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    margin-top: 30px;
+    font-size: 12px;
+    line-height: 20px;
+    /* or 143% */
+
+
+    color: #FFFFFF;
+}
+
+.sale_description_btn {
+        /* Rectangle */
+    box-sizing: border-box;
+    width: 70%;
+    height: 40px;
+    color: white;
+    margin-top: 30px;
+    padding-left: 5px;
+    padding-right: 5px;
+    
+    background: rgba(0, 0, 0, 0);
+        /* Accent */
+    
+    border: 2px solid white;
+    border-radius: 40px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.btn_label {
+    font-size: 90%;
+}
+.goods {
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+.goods_items {
+    display: flex;
+    justify-content: space-between;
+}
+
+.goods_item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 25px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 25px;
+    background-color: white;
+    width: 21%;
+
+}
+
+.item_description {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+
+    color: #333333;
+    margin-top: 7%;
+    margin-bottom: 7%;
+}
+
+.price {
+    margin-bottom: 7%;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 21px;
+    line-height: 25px;
+    text-align: center;
+    letter-spacing: 0.05em;
+}
+
+.goods_img {
+    width: 125px;
+    height: 166px;
+}
+.goods_header {
+    font-weight: bold;
+    font-size: 18px;
+    margin-bottom: 38px;
+}
+
+.buy_btn {
+    background: #66C05D;
+    border-radius: 30px;
+    border: 0;
+    width: 50%;
+    height: 35px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    /* identical to box height */
+    cursor: pointer;
+
+    text-align: center;
+    letter-spacing: 0.05em;
+
+    color: #FFFFFF;
 }
 
 
